# 404CircuitSim

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  Doxyfile  Draft1.net  LICENSE.md  README.md  benchmark.txt  err  graphs.md  original_results.txt  out.csv  out.txt  plot.py  plot_diff.py  requirements.txt  result.txt  setup.sh  srs.html  srs.md  tree.txt
benchmarking/: netlist100.cir  netlist1000.cir  netlist150.cir  netlist200.cir  netlist250.cir  netlist300.cir  netlist350.cir  netlist400.cir  netlist450.cir  netlist50.cir  netlist500.cir  netlist550.cir  netlist600.cir  netlist650.cir  netlist700.cir  netlist750.cir  netlist800.cir  netlist850.cir  netlist900.cir  netlist950.cir
doc/: files.html  hierarchy.html  index.html  inherit_graph_2.md5  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_8.md5
doc/d1/d22/: a00057.md5
doc/d1/d6e/: a00073.map  a00073.md5
doc/d1/dea/: a00054.map
doc/d2/d1f/: a00083.html
doc/d3/d32/: a00105.map
doc/d3/d52/: a00023_source.html
doc/d4/d81/: a00110.map  a00110.md5
doc/d5/d16/: a00029_source.html
doc/d5/de0/: a00050.md5
doc/d7/d70/: a00106.map
doc/d7/df7/: a00058.map
doc/d8/d53/: a00081.map
doc/d9/dec/: a00090.map
doc/da/d74/: a00099.html
doc/da/d82/: a00091.html
doc/db/db2/: a00020_source.html
doc/db/db6/: a00074.map
doc/dd/d42/: a00109.md5
doc/dd/dad/: a00005_source.html
doc/df/d13/: a00085.md5
doc/html/: inherit_graph_1.md5  inherit_graph_3.map  inherit_graph_7.md5  inherits.html
doc/html/search/: all_3.js  all_6.js  all_7.js  all_a.js  classes_6.js  classes_9.js  classes_a.js
doc/latex/: annotated.tex  hierarchy.tex  refman.tex
doc/search/: all_2.js  classes_0.js  classes_4.js
docs/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_7.md5  inherit_graph_8.map  inherit_graph_8.md5  inherits.html
docs/d0/d61/: a00100.html
docs/d0/dc2/: a00104.html
docs/d1/d1e/: a00087.html  a00087.map  a00087.md5
docs/d1/d22/: a00057.html
docs/d1/d51/: a00079.map  a00079.md5
docs/d1/d6e/: a00073.html
docs/d1/d6f/: a00063.html
docs/d1/d84/: a00052.html  a00052.map  a00052.md5  a00097.html
docs/d1/dc1/: a00092.html
docs/d1/dc6/: a00037.md5
docs/d1/dd6/: a00108.html
docs/d2/d79/: a00051.html  a00051.map  a00051.md5
docs/d2/de7/: a00014_source.html
docs/d2/dee/: a00049.html  a00049.md5
docs/d3/d32/: a00105.html
docs/d3/d52/: a00023_source.html
docs/d3/d8b/: a00059.html
docs/d3/dea/: a00046.md5
docs/d4/d31/: a00069.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  pages_0.js  searchdata.js
html/: dir_d44c64559bbebec7f509842c48db8b23.html  graph_legend.html  inherit_graph_1.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_5.md5  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_8.map
html/search/: all_8.js  classes_3.js  classes_5.js  classes_7.js
include/: circuit.hpp  circuitStructure.hpp  circuitSuper.hpp  circuit_diode.hpp  circuit_linear.hpp  circuit_math.hpp  circuit_parser.hpp  circuit_simulator.hpp  circuit_source.hpp  circuit_source_dependent.hpp  circuit_structure.hpp  circuit_transistor.hpp  circuits.hpp  currentSource.hpp  linearDevices.hpp  symbolic.hpp
src/: circuits.hpp  main.cpp  parser.cpp
src/Components/: linearDevices.cpp
src/circuit/: circuit.cpp  circuit_linear.cpp
src/circuit_math/: math.cpp
src/circuit_parser/: parser.cpp
src/components/: circuitStructure.cpp  circuits.cpp  linearDevices.cpp
src/math/: math.cpp
src/parser/: parser.cpp
src/simulation/: math.cpp
test/: CMakeLists.txt  a.out  benchmark.cpp  example_netlist.txt  parser_test.cpp  test_diode.cpp  test_eigen.cpp  test_getopt.cpp  test_math.cpp  test_parser.cpp  test_transient.cpp
test/EvalTests/DoubleDiode_test/: double_diode.html  graphBuilder.ipynb  netlist.cir
test/EvalTests/PythonScripts/: builder.ipynb  diff.py  nodeGenerator.py
test/EvalTests/SingleDiode_test/: netlist.cir
test/EvalTests/util/: output_separator.cpp  standard_timestep.cpp
test/PythonScripts/: nodeGenerator.py
test/SpiceNetlists/: Draft1.asc  Draft1.net  Draft1.txt  RLCI.cir  example.cir  full-wave-rect.net  inductorExample.cir  multipleVoltageSources.cir  netlist.cir  phase.asc  phase.cir  phase.txt  rcnetwork.cir  rectifier.cir  resistorNetwork.cir  resistorNetwork.txt  simpleDiode.cir  specExample.cir  test.cir  transientExample.cir  transientExample.txt  voltageSourceDC.cir
(+137 files in other folders)
